--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 .DS_Store
+*.meta
+/sdk/*
+!/sdk/redistributable_bin/*.meta
 
 # This .gitignore file should be placed at the root of your Unity project directory
 #
